--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,22 @@
         android:id="@+id/bart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:contentDescription="@string/bart_simpson"
-        android:keyboardNavigationCluster="true"
         android:onClick="fade"
-        app:srcCompat="@drawable/bart"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="20dp"
-        tools:targetApi="o" />
+        app:srcCompat="@drawable/bart" />
+
+    <ImageView
+        android:id="@+id/homer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:alpha="0"
+        android:contentDescription="@string/homer_simpson"
+        app:srcCompat="@drawable/homer" />
 
 </RelativeLayout>
