--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:alpha="0"
+        android:alpha="0.2"
         android:contentDescription="@string/homer_simpson"
+        android:onClick="fade"
         app:srcCompat="@drawable/homer" />
 
 </RelativeLayout>
