--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,31 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:columnCount="2"
+        android:rowCount="1">
 
         <Button
             android:id="@+id/guessTheCelebrity"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_row="1"
+            android:layout_row="0"
+            android:layout_gravity="center_horizontal"
             android:onClick="guessTheCelebrity"
             android:tag="0"
             android:text="Guess The Celebrity" />
+
+        <Button
+            android:id="@+id/whatTheWeather"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:layout_gravity="center_horizontal"
+            android:onClick="whatsTheWeather"
+            android:tag="1"
+            android:text="What's the weather" />
     </GridLayout>
 </RelativeLayout>
