--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:columnCount="2"
-        android:rowCount="1">
+        android:rowCount="2">
 
         <Button
             android:id="@+id/guessTheCelebrity"
@@ -34,5 +34,16 @@
             android:onClick="whatsTheWeather"
             android:tag="1"
             android:text="What's the weather" />
+
+        <Button
+            android:id="@+id/hikersWatch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:layout_gravity="center_horizontal"
+            android:onClick="hikersWatch"
+            android:tag="2"
+            android:text="Hikers Watch" />
     </GridLayout>
 </RelativeLayout>
