--- a/app/src/main/res/layout/activity_whats_that_weather.xml
+++ b/app/src/main/res/layout/activity_whats_that_weather.xml
@@ -8,7 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/imageView"
-        android:src="@drawable/background"
+        android:src="@drawable/whatstheweather"
         android:longClickable="false"
         android:adjustViewBounds="false"
         android:scaleType="centerCrop"
