--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,5 +67,16 @@
             android:onClick="notes"
             android:tag="4"
             android:text="Notes" />
+
+        <Button
+            android:id="@+id/newsReader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:layout_gravity="center_horizontal"
+            android:onClick="newsReader"
+            android:tag="5"
+            android:text="News Reader" />
     </GridLayout>
 </RelativeLayout>
